@@ -16,6 +16,7 @@ Body=tana_fi_latest
 Icon=general_chat
 Text-Domain=maemo-af-desktop
 LED-Pattern=PatternCommunicationIM
+D-Bus-Call=org.freedesktop.Telepathy.Client.NotificationUI /org/freedesktop/Telepathy/Client/NotificationUI com.nokia.RtcomNotificationUi GroupedChatInvoked
 
 [sms-message]
 Destination=FIXME
@@ -25,6 +26,7 @@ Icon=general_sms
 Empty-Summary=tana_fi_unknown_number
 Text-Domain=maemo-af-desktop
 LED-Pattern=PatternCommunicationSMS
+D-Bus-Call=org.freedesktop.Telepathy.Client.NotificationUI /org/freedesktop/Telepathy/Client/NotificationUI com.nokia.RtcomNotificationUi GroupedSmsInvoked
 
 [auth-request]
 Destination=FIXME
